[workspace]
resolver = "3"
members = [
    "indicators-ta",
]

# ============================================================================
# Workspace Package Defaults
# ============================================================================

[workspace.package]
version      = "0.1.0"
edition      = "2024"
authors      = ["nuniesmith"]
license      = "MIT"
repository   = "https://github.com/nuniesmith/indicators-ta"
rust-version = "1.80.0"

# ============================================================================
# Workspace Dependencies
# ============================================================================

[workspace.dependencies]

# ── Async runtime ────────────────────────────────────────────────────────────
tokio             = { version = "1.51.1",  features = ["full"] }
tokio-util        = { version = "0.7.18",   features = ["rt"] }
tokio-stream      = { version = "0.1.18",   features = ["sync"] }
tokio-tungstenite = { version = "0.29.0",  features = ["native-tls"] }
futures           = "0.3.32"
futures-util      = "0.3.32"
async-trait       = "0.1.89"

# ── Serialisation ────────────────────────────────────────────────────────────
serde      = { version = "1.0.228",   features = ["derive"] }
serde_json = "1.0.149"
postcard   = { version = "1.1.3",   features = ["alloc"] }
toml       = "1.1.2+spec-1.1.0"

# ── HTTP / WebSocket ─────────────────────────────────────────────────────────
reqwest      = { version = "0.13.2", features = ["json", "rustls-tls"], default-features = false }
axum         = { version = "0.8.8",  features = ["macros", "ws"] }
tungstenite  = "0.29.0"
tower        = "0.5.3"
tower-http   = { version = "0.6.8", features = ["cors", "trace"] }
hyper        = "1.9.0"

# ── Data processing ──────────────────────────────────────────────────────────
ndarray = "0.17.2"
statrs  = "0.18.0"

# ── Database ─────────────────────────────────────────────────────────────────
redis = { version = "1.2.0", features = ["tokio-comp", "connection-manager"] }

# ── Time & date ──────────────────────────────────────────────────────────────
chrono = { version = "0.4.44", features = ["serde"] }

# ── Logging & tracing ────────────────────────────────────────────────────────
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender   = "0.2.4"

# ── Error handling ───────────────────────────────────────────────────────────
anyhow    = "1.0.102"
thiserror = "2.0.18"

# ── Cryptography ─────────────────────────────────────────────────────────────
hmac   = "0.13.0"
sha2   = "0.11.0"
hex    = "0.4.3"
base64 = "0.22.1"

# ── Configuration ────────────────────────────────────────────────────────────
config  = "0.15.22"
dotenvy = "0.15.7"

# ── Messaging ────────────────────────────────────────────────────────────────
flume = "0.12.0"

# ── Metrics ──────────────────────────────────────────────────────────────────
prometheus = "0.14.0"

# ── DSP / Signal processing ──────────────────────────────────────────────────
rustfft     = "6.4.1"
num-complex = "0.4.6"

# ── Compression ──────────────────────────────────────────────────────────────
flate2 = "1.1.9"

# ── Utilities ────────────────────────────────────────────────────────────────
rand        = "0.10.0"
rayon       = "1.11.0"
uuid        = { version = "1.23.0",    features = ["v4", "serde"] }
bytes       = "1.11.1"
parking_lot = "0.12.5"
url         = "2.5.8"
regex       = "1.12.3"

# ── Numeric types ────────────────────────────────────────────────────────────
rust_decimal = { version = "1.41.0", features = ["serde-float"] }

# ── Network utilities ─────────────────────────────────────────────────────────
governor = "0.10.4"

# ── CLI ──────────────────────────────────────────────────────────────────────
clap    = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"

# ── Testing ──────────────────────────────────────────────────────────────────
tokio-test = "0.4.5"
mockito    = "1.7.2"
tempfile   = "3.27.0"
criterion  = { version = "0.8.2", features = ["async_tokio"] }

# ============================================================================
# Profile Configuration
# ============================================================================

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 16
strip         = true
debug         = false
panic         = "abort"

[profile.release-with-debug]
inherits = "release"
debug    = true
strip    = false

[profile.ci]
inherits      = "release"
lto           = false
codegen-units = 256

# ============================================================================
# Lints
# ============================================================================

[workspace.lints.rust]
unsafe_code  = "warn"
missing_docs = "allow"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"
