[package]
name          = "indicators-ta"
version       = "0.1.0"
edition       = "2024"
authors       = ["nuniesmith"]
license       = "MIT"
repository    = "https://github.com/nuniesmith/indicators-ta"
rust-version  = "1.92.0"
description   = "Technical analysis indicators and market regime detection for algorithmic trading"
documentation = "https://docs.rs/indicators-ta"
readme        = "README.md"
keywords      = ["trading", "technical-analysis", "indicators", "finance", "regime"]
categories    = ["algorithms", "mathematics", "science"]

[dependencies]
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono     = { version = "0.4", features = ["serde"] }

[dev-dependencies]
rand = "0.10.0"

[lib]
name = "indicators"
path = "src/lib.rs"

# ============================================================================
# Profile Configuration
# ============================================================================

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 16
strip         = true
debug         = false
panic         = "abort"

[profile.release-with-debug]
inherits = "release"
debug    = true
strip    = false

[profile.ci]
inherits      = "release"
lto           = false
codegen-units = 256

# ============================================================================
# Lints
# ============================================================================

[lints.rust]
unsafe_code  = "warn"
missing_docs = "allow"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
module_name_repetitions = "allow"
must_use_candidate      = "allow"
